Habilitando algunos endpoints

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: spring-boot-actuator
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, beans
