Habilitando todos los endpoints

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, beans
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
