--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,15 @@ management:
   info:
     env:
       enabled: true
+    build:
+      enabled: true
+    git:
+      enabled: true
+      mode: full
+    java:
+      enabled: true
+    os:
+      enabled: true
 
 info:
   app:
